@@ -6,6 +6,10 @@ Fix for restoring files in directories with really long names.
 rdiff-backup will now exit by default if it thinks another
 rdiff-backup process is currently working on the same repository.
 
+Empty error_log, mirror_metadata, extended_attribute, and
+access_control_lists files will no longer be gzipped (suggestion by
+Hans F. Nordhaug).
+
 
 New in v1.1.4 (2005/12/13)
 --------------------------
